add bootstrap version

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         
             <div class="buttons">
                 <button onclick="AddNewProject()" class="create">Создать</button>
-                <button onclick="CheckSelect();" name="deleteButton" class="delete">Удалить</button>
+                <button onclick="CheckSelect()" name="deleteButton" class="delete">Удалить</button>
             </div>
 
             
